Fixes Squads to ensure there is always a frontline attacker